@@ -18,10 +18,10 @@ and uses it to controll new slaves and their environment
     >>> group.defaultspec = 'popen//via=master'
     >>> master = group.makegateway('popen//id=master')
     >>> master
-    <Gateway id='master' receive-live, 0 active channels>
+    <Gateway id='master' receive-live, thread model, 0 active channels>
     >>> slave = group.makegateway()
     >>> slave
-    <Gateway id='gw0' receive-live, 0 active channels>
+    <Gateway id='gw0' receive-live, thread model, 0 active channels>
     >>> group
     <Group ['master', 'gw0']>
 
