@@ -1,16 +1,11 @@
 [tox]
-envlist=py26,py27,py32,py33,pypy,flakes
-distshare={homedir}/.tox/distshare
-
-[tox:hudson]
-distshare={toxworkdir}/distshare
-sdistsrc={distshare}/execnet-*
+envlist=py26,py27,py33,py34,pypy,flakes
 
 [testenv]
 changedir=testing
 deps=pytest
      pytest-timeout
-commands=py.test -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
+commands=py.test -rsfxX {posargs}
 
 [testenv:flakes]
 changedir=
@@ -18,7 +13,7 @@ deps=pytest-flakes
 commands = py.test -m flakes --flakes execnet testing
 
 [testenv:jython]
-commands=jython -m pytest -rsfxX --junitxml={envlogdir}/junit-{envname}.xml []
+commands=jython -m pytest -rsfxX {posargs}
 
 [testenv:docs]
 basepython=python
@@ -26,8 +21,7 @@ changedir=doc
 deps=sphinx
      pytest
 commands=
-    py.test \
-        -rsfxX -v --junitxml={envlogdir}/junit-{envname}.xml check_sphinx.py
+    py.test -rsfxX -v check_sphinx.py
 
 [pytest]
 timeout = 20
